# HashDuplicationImage

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  augment.py  faissSearch.py  filenames.npy  gui.py  index.html  main.py  requirement.txt  requirements.txt  setup.py
Application/: cluster.py  feature_extract.py  normalize.py  normarlize.py  resnet.py  restnet.py  simhash.py
Hash Structure/Header/: bloom_filter.h  hash.h  hash_func.h  hash_table.h  min_hash.h  sim_hash.h
Hash Structure/Source/: binding.cpp  bloom_filter.cpp  bloom_filter_binding.cpp  hashTable.cpp  hash_func.cpp  hash_table.cpp  hash_table_binding.cpp  min_hash.cpp  min_hash_binding.cpp  sim_hash.cpp  sim_hash_binding.cpp
app/: feature_extractors.py  main.py  perceptual_clustering.py  preload_models.py  quality_scorer.py  universe_map.py
app/static/: Universe3D.js  feature_extractors.py  index.html  script.js  styles.css
hash_table_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
